--- a/templates/register.html
+++ b/templates/register.html
@@ -46,15 +46,17 @@
       <div class="container-fluid">
         <div class="row min-vh-100 flex-center g-0">
           <div class="col-lg-8 col-xxl-5 py-3 position-relative"><img class="bg-auth-circle-shape" src="static/assets/img/icons/spot-illustrations/bg-shape.png" alt="" width="250"><img class="bg-auth-circle-shape-2" src="static/assets/img/icons/spot-illustrations/shape-1.png" alt="" width="150">
-              {% if messages %}
-                  {% for  message in messages %} 
-                  <div class="alert alert-danger border-2 d-flex align-items-center" role="alert">
-                    <div class="bg-danger me-3 icon-item"><span class="fas fa-times-circle text-white fs-3"></span></div>
-                    <p class="mb-0 flex-1">{{message}}</p>
-                    <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
-                  </div>
-                  {% endfor %}
-              {% endif%}
+{% with messages = get_flashed_messages() %}
+        {% if messages %}
+                {% for  message in messages %} 
+              <div class="alert alert-danger border-2 d-flex align-items-center" role="alert">
+                <div class="bg-danger me-3 icon-item"><span class="fas fa-times-circle text-white fs-3"></span></div>
+                <p class="mb-0 flex-1">{{message}}</p>
+                <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+                {% endfor %}
+        {% endif %}
+{% endwith %}
             <div class="card overflow-hidden z-index-1">
               <div class="card-body p-0">
                 <div class="row g-0 h-100">
@@ -69,7 +71,7 @@
                       </div>
                     </div>
                     <div class="mt-3 mb-4 mt-md-4 mb-md-5 light">
-                      <p class="pt-3 text-white">Have an account?<br><a class="btn btn-outline-light mt-2 px-4" href="#">Log In</a></p>
+                      <p class="pt-3 text-white">Have an account?<br><a class="btn btn-outline-light mt-2 px-4" href="/login">Log In</a></p>
                     </div>
                   </div>
                   <div class="col-md-7 d-flex flex-center">
@@ -124,18 +126,14 @@
     </a>
 
 
-    <!-- ===============================================-->
-    <!--    JavaScripts-->
-    <!-- ===============================================-->
     <script src="static/vendors/popper/popper.min.js"></script>
     <script src="static/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="static/vendors/anchorjs/anchor.min.js"></script>
     <script src="static/vendors/is/is.min.js"></script>
+    <script src="static/vendors/prism/prism.js"></script>
     <script src="static/vendors/fontawesome/all.min.js"></script>
     <script src="static/vendors/lodash/lodash.min.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="static/vendors/list.js/list.min.js"></script>
     <script src="static/assets/js/theme.js"></script>
-
-
-</body></html>
+</body>
+</html>
