--- a/templates/logout.html
+++ b/templates/logout.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Falcon | Dashboard &amp; Web App Template</title>
+    <title>YouBuy | Buy with confident &amp; !</title>
 
 
     <!-- ===============================================-->
@@ -71,8 +71,8 @@
                       </div>
                       <!--/.bg-holder-->
 
-                      <div class="z-index-1 position-relative"><a class="link-light mb-4 font-sans-serif fs-4 d-inline-block fw-bolder" href="../../../index.html">falcon</a>
-                        <p class="opacity-75 text-white">With the power of Falcon, you can now focus only on functionaries for your digital products, while leaving the UI design on us!</p>
+                      <div class="z-index-1 position-relative"><a class="link-light mb-4 font-sans-serif fs-4 d-inline-block fw-bolder" href="/">YouBuy</a>
+                        <p class="opacity-75 text-white">YouBuy buy with confident and make sure to follow us on social media and thanks for visiting us!</p>
                       </div>
                     </div>
                     <div class="mt-3 mb-4 mt-md-4 mb-md-5 light">
@@ -83,7 +83,7 @@
                     <div class="p-4 p-md-5 flex-grow-1">
                       <div class="text-center"><img class="d-block mx-auto mb-4" src="static/assets/img/icons/spot-illustrations/45.png" alt="shield" width="100" />
                         <h3>See you again!</h3>
-                        <p>Thanks for using YouBuy. You are <br />now successfully signed out.</p><a class="btn btn-primary btn-sm mt-3" href="../../../pages/authentication/card/login.html"><span class="fas fa-chevron-left me-1" data-fa-transform="shrink-4 down-1"></span>Return to Login</a>
+                        <p>Thanks for using YouBuy. You are <br />now successfully signed out.</p><a class="btn btn-primary btn-sm mt-3" href="/login"><span class="fas fa-chevron-left me-1" data-fa-transform="shrink-4 down-1"></span>Return to Login</a>
                       </div>
                     </div>
                   </div>
@@ -193,7 +193,7 @@
         </div>
         <div class="text-center mt-5"><img class="mb-4" src="static/assets/img/icons/spot-illustrations/47.png" alt="" width="120" />
           <h5>Like What You See?</h5>
-          <p class="fs--1">Get Falcon now and create beautiful dashboards with hundreds of widgets.</p><a class="mb-3 btn btn-primary" href="https://themes.getbootstrap.com/product/falcon-admin-dashboard-webapp-template/" target="_blank">Purchase</a>
+          <p class="fs--1">Get Youbuy now and create beautiful dashboards with hundreds of widgets.</p><a class="mb-3 btn btn-primary" href="https://themes.getbootstrap.com/product/falcon-admin-dashboard-webapp-template/" target="_blank">Purchase</a>
         </div>
       </div>
     </div><a class="card setting-toggle" href="#settings-offcanvas" data-bs-toggle="offcanvas">
